# Copyright © 2026 Lee Hoang
#
# [This work is made available under the "Apache 2.0 or MIT License".]
#
# See the file LICENSE.txt in this distribution for license terms.
[package]
name = "mb2-hsv"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
microbit-v2 = "0.16"
panic-rtt-target = "0.2"
rtt-target = "0.6"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.hsv]
git = "https://github.com/pdx-cs-rust-embedded/hsv"
